# cid-resolver

./: Dockerfile  README.md  docker-compose.yml  env-example  pyproject.toml  redis.conf  sonar-project.properties
.github/workflows/: CI.yml  ReleasePushy.yml  release.yml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
cid_resolver/: config.py  main.py
cid_resolver/app/: JWTBearer.py  auth.py  verify_signature.py
cid_resolver/routers/: auth.py  cid.py
kubernetes/cas-integration/: Makefile
tests/: conftest.py  test_api.py  test_cid.py  test_jwt.py
