[tool.poetry]
name = "cid-resolver"
version = "0.1.1"
description = ""
authors = ["Jürgen Eckel <juergen@riddleandcode.com>"]
readme = "README.md"
packages = [{include = "cid_resolver"}]

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.6"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
redis = "^4.4.4"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
